deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: echo-test
spec:
  selector:
    app: echo-pod
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
