deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echo-test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: echo.server.com
    http:
      paths:
      - path: /
        backend:
          serviceName: echo-service
          servicePort: 80
